Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Sun Sep 9 2012 Thunor <thunorsif@hotmail.com>
- Refactored the list widget although I don't recommend using it as you
  can't auto-select a row in browse mode and multiple mode doesn't work.
  At least its code is all in one file now which tidies things up a bit.

* Sat Sep 8 2012 Thunor <thunorsif@hotmail.com>
- Fixed launching from a timer causing the timer to stop functioning:
  because launching doesn't return I've put in place a check and if a
  timer executes the launch then it is cancelled with a warning message.
  It's easily resolved: simply make the timer activate a checkbox which
  launches outside of the timer callback.
- Fixed timer callbacks not being destroyed along with their widgets.
- Fixed examples/miscellaneous/presentwindow because it was launching
  directly from within a timer when only indirectly is now possible.

* Fri Sep 7 2012 Thunor <thunorsif@hotmail.com>
- Added examples/eventbox/eventbox.

* Thu Sep 6 2012 Thunor <thunorsif@hotmail.com>
- Added support for the "shadow-type" tag attribute to widgets that
  are placed inside a viewport as the default is GTK_SHADOW_IN.
- Added the "theme-icon-size" tag attribute to the button widget.
- Added the "stock-icon-size" tag attribute to the button widget.
- Added the "theme-icon-size" tag attribute to the pixmap widget.
- Added the "stock-icon-size" tag attribute to the pixmap widget.
- New widget: <eventbox>.

* Wed Sep 5 2012 Thunor <thunorsif@hotmail.com>
- Updated examples/table/table.
- Moved the table widget's selected-row check to after signal connection
  as it wasn't firing on initial refresh.
- Fixed leading zero issue with strnatcmp.
- Added the "freeze-thaw" tag attribute to the table widget to stop
  rendering when adding data and to resume rendering when finished.
- Added save action function support to the tree widget.
- Added support for the tag attributes "h/vscrollbar-policy" to all